Post Build Fixes

--- a/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Palette_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -187,7 +187,8 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Blueprints/Maps/RootLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Blueprints/BP_CameraChangeVolume.BP_CameraChangeVolume
 
 [RootWindow]
 ScreenPosition=X=292.000 Y=254.000
@@ -4457,7 +4458,7 @@ BP_Shade_Controller_C=
 BP_Task_GetRoamLocation_C=
 BP_Task_GetPlayerLocation_C=
 BP_Tasks_MoveToSmooth_C=
-CapsuleComponent=StaticMeshActor.Collision.Collision,
+CapsuleComponent=
 PlanarReflectionComponent=
 BP_WaterBody_C=Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,PostProcessVolume.Lens.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PostProcessVolume.Rendering Features.Rendering Features,BoxComponent.Collision.Collision,BP_Pawn_Palette_C.Physics.ConstraintsGroup,BP_Pawn_Palette_C.Rendering.TextureStreaming,BP_Pawn_Palette_C.Rendering.LOD,BP_Pawn_Palette_C.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 PlanarReflection=Landscape.Collision.Collision,
@@ -4562,10 +4563,10 @@ PostProcessComponent=PostProcessComponent.PostProcessVolume.Rendering Features,
 BP_BlackAndWhitePP_C=PropertyWrapper.DefaultValueCategory.None,Landscape.Collision.Collision,StaticMeshComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshActor.Collision.Collision,PostProcessVolume.Lens.Lens,SkeletalMeshComponent.Collision.Collision,SphereComponent.Collision.Collision,PostProcessVolume.Rendering Features.Rendering Features,BoxComponent.Collision.Collision,BP_Pawn_Palette_C.Physics.ConstraintsGroup,BP_Pawn_Palette_C.Rendering.TextureStreaming,BP_Pawn_Palette_C.Rendering.LOD,BP_Pawn_Palette_C.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/EnvironmentAssets/Train/Train
-MRUItem1=/Game/Assets/EnvironmentAssets/Train/Cart
-MRUItem2=/Game/Blueprints/Blueprints/BP_Pawn_Easel
-MRUItem3=/Game/Blueprints/Blueprints/BP_CameraChangeVolume
+MRUItem0=/Game/Blueprints/Blueprints/BP_CameraChangeVolume
+MRUItem1=/Game/Assets/EnvironmentAssets/Train/Train
+MRUItem2=/Game/Assets/EnvironmentAssets/Train/Cart
+MRUItem3=/Game/Blueprints/Blueprints/BP_Pawn_Easel
 MRUItem4=/Game/Blueprints/Blueprints/Shades/BP_Shade_Controller
 MRUItem5=/Game/Blueprints/Blueprints/Shades/ShadeTypes/BP_Shade_Boss_Thalassophobia
 MRUItem6=/Game/Blueprints/Blueprints/Shades/BP_Shade_Base
@@ -5089,7 +5090,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" "
-Object="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+Object=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 AnimationSettings="\"Object.Compression.KeyEndEffectorsMatchNameArray\" \"Object.CustomAttributes.BoneCustomAttributesNames\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[0]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[1]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[2]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[3]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[4]\" \"Object.CustomAttributes.BoneCustomAttributesNames.BoneCustomAttributesNames[5]\" "
@@ -5131,7 +5132,7 @@ MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
 Pawn_Palette_C=
 Pawn="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-Pawn=
+Pawn="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
 None=======
 None=======
 StaticObject_Paintable_C=
@@ -5205,7 +5206,7 @@ EnvQueryTest_PathfindingBatch="\"Object.Pathfinding.PathFromContext\" \"Object.F
 BP_Tasks_Run_C="\"Object.Task.TickInterval\" "
 BP_Tasks_Walk_C="\"Object.Task.TickInterval\" "
 BP_Shade_Base_C=
-Character=
+Character="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
 BP_Task_GetInvestigateLocation_C=
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
